<resources>
    <string name="app_name">AppDesign</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_detail">Detail</string>
    <string name="menu_login">Login</string>

    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm_Password</string>

    <string name="action_notification">Notification</string>
    <string name="action_account">Account</string>

    <string-array name="gender">
        <item>Type Chart</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
