<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="89dp"
        android:text="@string/register"
        android:textAppearance="@style/register"
        android:gravity="center_horizontal|top" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:gravity="center"
        android:hint="@string/name"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_backgroun_edit_text"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:gravity="center"
        android:hint="@string/email"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_backgroun_edit_text"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:gravity="center"
        android:hint="@string/username"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_backgroun_edit_text"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:gravity="center"
        android:hint="@string/password"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_backgroun_edit_text"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

    <EditText
        android:id="@+id/edit_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_backgroun_edit_text"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="27dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorAccent"
        android:padding="15dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_confirm_password"
        app:layout_constraintVertical_bias="0.100" />
</androidx.constraintlayout.widget.ConstraintLayout>